--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ cloudpickle
 matplotlib
 git+https://github.com/dennisl88/rand_param_envs.git
 git+https://github.com/dennisl88/multiworld.git@russell
+git+https://github.com/rlworkgroup/metaworld.git@api-rework
